@@ -7,6 +7,7 @@ away, please see git history for details.
 
 - v0.6.3 (2025-xx-xx) (draw)     add image quad (v1.4.0)
                       (draw)     add draw callbacks
+                      (datatime) fix string name for "March"
                       (starter)  added reverse z depth buffer support (v1.3.0)
                       (graphics) fix draw_indexed multiple index buffers (v1.5.1)
                       (graphics) fix new validation layer errors (v1.5.2)
